improve directory structure 2.0

--- a/viredroid/src/main/res/layout/common_ui.xml
+++ b/viredroid/src/main/res/layout/common_ui.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true" />
 
-    <org.viredroid.cardboard.ViredroidOverlayView
+    <org.viredero.viredroid.ViredroidOverlayView
         android:id="@+id/overlay"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
